# plugin-template

./: .dockerignore  Dockerfile  LICENSE  PLUGIN.md  PROVIDER.md  README.md  apk-packages.txt  pyproject.toml
.github/workflows/: ci.yaml  cleanup.yaml
src/ai_contained/plugins/template/: __init__.py
src/ai_contained/provider/template/: __init__.py
tests/: conftest.py  test_adventure_recap.py  test_adventure_stats.py  test_play_adventure.py
