[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-contained-plugin-helloworld"  # TODO: rename to ai-contained-plugin-<yourplugin>
version = "0.1.0"
description = "Hello World adventure game plugin for AI-Contained"  # TODO: update
requires-python = ">=3.12"
dependencies = [
    "ai-contained-core-mcp",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.0",
    "pytest-describe>=3.1",
    "assertpy>=1.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "focus: run only focused tests (use with -m focus)",
]

[project.entry-points."ai_contained.plugins"]
helloworld = "ai_contained.plugins.helloworld:register"  # TODO: rename to <yourplugin> = "ai_contained.plugins.<yourplugin>:register"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_contained"]
