[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-contained-provider-template"  # TODO: rename to ai-contained-provider-<yourprovider>
version = "0.1.0"
description = "Hello World adventure game provider for AI-Contained"  # TODO: update
requires-python = ">=3.12"
dependencies = [
    "ai-contained-core-mcp",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.0",
    "pytest-describe>=3.1",
    "assertpy>=1.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "focus: run only focused tests (use with -m focus)",
]

[project.entry-points."ai-contained.provider"]
template = "ai_contained.provider.template:register"  # TODO: rename to <yourprovider> = "ai_contained.provider.<yourprovider>:register"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_contained"]
